--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-heading text-uppercase">Kitutes Donatê</div>
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://api.whatsapp.com/send?phone=55119578071111&text=Oi%20quero%20encomendar%20100%20produtos" target="_blank">Encomendar</a>
+                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://api.whatsapp.com/send?phone=5511964229628&text=Oi%20quero%20comprar%20os%20brigadeiros%20agora%20!" target="_blank">Encomendar</a>
             </div>
         </header>
         <!-- Services-->
@@ -538,7 +538,7 @@
         </div>
         <style>
           header.masthead{
-            background-image: url(https://cdn.pixabay.com/photo/2017/11/27/03/38/pie-2980431_1280.jpg);
+            background-image: url(https://www.oliviascuisine.com/wp-content/uploads/2014/09/brigadeiro3-682x1024.jpg);
           }
         </style>
         <!-- Bootstrap core JS-->
